<resources>
    <string name="app_name">Upes_App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="socs">School of Computer Science</string>
    <string name="soe">School of Engineering</string>
    <string name="sob">School of Business</string>
    <string name="sol">School of Law</string>
    <string name="sod">School of Designing</string>
    <string name="register">Register</string>
    <string name="contact">Contact</string>
    <string name="nodata">No data available for this Category</string>
    <string name="noconnection">Offline</string>
</resources>
