<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Select your Default School"
    android:textColor="#000000"
    android:textStyle="bold"
    android:gravity="center"
    android:textSize="18sp"/>
    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:text="ALL Schools"
        android:visibility="
        visible"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sod"
        app:layout_constraintTop_toBottomOf="@+id/sol" />

    <Button
        android:id="@+id/sob"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:background="@color/sob"
        android:onClick="onCilck"
        android:text="@string/sob"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/sod"
        app:layout_constraintEnd_toStartOf="@+id/sol"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/socs" />

    <Button
        android:id="@+id/socs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@color/socs"
        android:onClick="onCilck"
        android:text="@string/socs"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/sob"
        app:layout_constraintEnd_toStartOf="@+id/soe"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/soe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="28dp"
        android:background="@color/soe"
        android:onClick="onCilck"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/soe"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/sol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/socs"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sol"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:background="@color/sol"
        android:onClick="onCilck"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/sol"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sob"
        app:layout_constraintTop_toBottomOf="@+id/soe" />

    <Button
        android:id="@+id/sod"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:background="@color/sod"
        android:onClick="onCilck"
        android:text="@string/sod"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sob" />
</android.support.constraint.ConstraintLayout>